--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -10,7 +10,7 @@
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
     transition: all 400ms cubic-bezier(0, 0, 0.1, 1);
-    margin-top: 46px;
+    margin-top: 45px;
     box-shadow: 0 6px 0 rgba(0,0,0,.15);
 
     &.expanded {
@@ -23,7 +23,6 @@
 
     > .advanced-search {
         padding: 20px;
-        border-bottom: 1px solid lighten($primary-color, 35%);
         background: lighten($primary-color, 45%);
 
         form {
@@ -153,7 +152,7 @@
         @include checkboxes;
     }
     > .udfc-search {
-        height: 50px;
+        min-height: 50px;
         padding: 0 8px;
         background: lighten($primary-color, 15%);
 
@@ -180,17 +179,82 @@
             padding: 14px 15px;
             color: white;
             font-weight: 300;
+            display: inline-block;
         }
-        .udfc-selector {
+        .udfc-label {
+            position: relative;
+            display: inline-block;
+            margin: 0;
+            font-size: 1.6rem;
+            line-height: 2rem;
+
+            &:after {
+                content: '\25BC';
+                font-size: 1rem;
+                margin-left: 12px;
+                position: absolute;
+                opacity: 0.5;
+                pointer-events: none;
+                color: white;
+                right: 10px;
+                top: 12px;
+            }
+            &:hover {
+                select {
+                    background: darken($primary-color, 5%);
+                    cursor: pointer;
+                }
+
+                &:after {
+                    opacity: 1;
+                }
+            }
+
+            select {
+                background: $primary-color;
+                display: inline-block;
+                margin: 0;
+                padding: 15px 33px 14px 15px;
+                font-weight: 500;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
+                cursor: pointer;
+                border: none;
+                outline: none;
+                color: white;
+                height: auto;
+                line-height: 2.0rem;
+                font-size: 1.6rem;
+                border-radius: 0;
+                margin-top: -3px;
+                min-width: 100px;
+                width: auto;
+                max-width: 220px;
+            }
+        }
+        input.stewardship-selector {
             background: $primary-color;
             display: inline-block;
-            margin: 0 1px;
-            padding: 15px 38px 15px 20px;
-            font-weight: 700;
+            margin: 0;
+            padding: 15px 15px 14px 15px;
+            font-weight: 500;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            cursor: pointer;
+            border: none;
+            outline: none;
             color: white;
+            height: auto;
+            line-height: 2.0rem;
+            font-size: 1.6rem;
+            border-radius: 0;
+            margin-top: -3px;
+            width: 110px;
 
             &:hover {
-                background: darken($primary-color, 15%);
+                background: darken($primary-color, 5%);
                 cursor: pointer;
 
                 &:after {
@@ -203,6 +267,10 @@
                 margin-left: 12px;
                 position: absolute;
                 opacity: 0.5;
+                pointer-events: none;
+                color: white;
+                right: 10px;
+                top: 12px;
             }
         }
     }
