--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -104,40 +104,45 @@
   {% if tree_stewardship_perm_level|is_read_or_write or plot_stewardship_perm_level|is_read_or_write or tree_alerts_perm_level|is_read_or_write or plot_alerts_perm_level|is_read_or_write %}
   <div class="udfc-search">
     <span>{% trans "I am looking for" %}</span>
-    <select id="udfc-search-model">
-      <option data-class="udfc-placeholder" selected />
-      {% if tree_stewardship_perm_level|is_read_or_write or tree_alerts_perm_level|is_read_or_write %}
-      {% if stewardship.tree.fields or alerts.tree.fields %}
-      <option data-model="tree">{% trans "trees" %}</option>
-      {% endif %}
-      {% endif %}
-      {% if plot_stewardship_perm_level|is_read_or_write or plot_alerts_perm_level|is_read_or_write %}
-      {% if stewardship.plot.fields or alerts.plot.fields %}
-      <option data-model="plot">{% trans "plots" %}</option>
-      {% endif %}
-      {% endif %}
-    </select>
+    <label class="udfc-label">
+        <select id="udfc-search-model">
+          <option data-class="udfc-placeholder" selected />
+          {% if tree_stewardship_perm_level|is_read_or_write or tree_alerts_perm_level|is_read_or_write %}
+          {% if stewardship.tree.fields or alerts.tree.fields %}
+          <option data-model="tree">{% trans "trees" %}</option>
+          {% endif %}
+          {% endif %}
+          {% if plot_stewardship_perm_level|is_read_or_write or plot_alerts_perm_level|is_read_or_write %}
+          {% if stewardship.plot.fields or alerts.plot.fields %}
+          <option data-model="plot">{% trans "plots" %}</option>
+          {% endif %}
+          {% endif %}
+        </select>
+    </label>
 
-    <select id="udfc-search-type">
-      <option data-class="udfc-placeholder" selected />
-      {% if stewardship %}
-      <option data-type="stewardship"
-              data-plot-udfd-id="{{ stewardship.plot.udfd.pk }}"
-              data-tree-udfd-id="{{ stewardship.tree.udfd.pk }}"
-              data-date-field-key="Date"
-              data-action-field-key="Action"
-              >{% trans "that received" %}</option>
-      {% endif %}
-      {% if alerts %}
-      <option data-type="alerts"
-              data-plot-udfd-id="{{ alerts.plot.udfd.pk }}"
-              data-tree-udfd-id="{{ alerts.tree.udfd.pk }}"
-              data-date-field-key="Date Noticed"
-              data-action-field-key="Action Needed"
-              >{% trans "that need" %}</option>
-      {% endif %}
-    </select>
+    <label class="udfc-label">
+        <select id="udfc-search-type">
+          <option data-class="udfc-placeholder" selected />
+          {% if stewardship %}
+          <option data-type="stewardship"
+                  data-plot-udfd-id="{{ stewardship.plot.udfd.pk }}"
+                  data-tree-udfd-id="{{ stewardship.tree.udfd.pk }}"
+                  data-date-field-key="Date"
+                  data-action-field-key="Action"
+                  >{% trans "that received" %}</option>
+          {% endif %}
+          {% if alerts %}
+          <option data-type="alerts"
+                  data-plot-udfd-id="{{ alerts.plot.udfd.pk }}"
+                  data-tree-udfd-id="{{ alerts.tree.udfd.pk }}"
+                  data-date-field-key="Date Noticed"
+                  data-action-field-key="Action Needed"
+                  >{% trans "that need" %}</option>
+          {% endif %}
+        </select>
+    </label>
 
+    
     <div id="udfc-extra-clauses" style="display: none">
       <input id="alerts-resolved"
              data-type="alerts"
@@ -145,22 +150,25 @@
              data-search-type="IS"
              value="Unresolved"/>
     </div>
+    
 
-    <select id="udfc-search-action" data-search-type="IS">
-      <option data-class="udfc-placeholder" selected />
-      {% for action in stewardship.tree.fields %}
-      <option data-model="tree" data-type="stewardship" style="display: none;">{{ action }}</option>
-      {% endfor %}
-      {% for action in alerts.tree.fields %}
-      <option data-model="tree" data-type="alerts" style="display: none;">{{ action }}</option>
-      {% endfor %}
-      {% for action in stewardship.plot.fields %}
-      <option data-model="plot" data-type="stewardship" style="display: none;">{{ action }}</option>
-      {% endfor %}
-      {% for action in alerts.plot.fields %}
-      <option data-model="plot" data-type="alerts" style="display: none;">{{ action }}</option>
-      {% endfor %}
-    </select>
+    <label class="udfc-label">
+        <select id="udfc-search-action" data-search-type="IS">
+          <option data-class="udfc-placeholder" selected />
+          {% for action in stewardship.tree.fields %}
+          <option data-model="tree" data-type="stewardship" style="display: none;">{{ action }}</option>
+          {% endfor %}
+          {% for action in alerts.tree.fields %}
+          <option data-model="tree" data-type="alerts" style="display: none;">{{ action }}</option>
+          {% endfor %}
+          {% for action in stewardship.plot.fields %}
+          <option data-model="plot" data-type="stewardship" style="display: none;">{{ action }}</option>
+          {% endfor %}
+          {% for action in alerts.plot.fields %}
+          <option data-model="plot" data-type="alerts" style="display: none;">{{ action }}</option>
+          {% endfor %}
+        </select>
+    </label>
 
     <span>{% trans "between" %}</span>
     <input id="udfc-search-date-from" data-search-type="MIN"
