--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -172,12 +172,12 @@
 
     <span>{% trans "between" %}</span>
     <input id="udfc-search-date-from" data-search-type="MIN"
-           class="stewardship-selector"
+           class="udfc-selector"
            {% include "treemap/partials/date_picker_init.html" %}
            />
     <span>{% trans "and" %}</span>
     <input id="udfc-search-date-to" data-search-type="MAX"
-           class="stewardship-selector"
+           class="udfc-selector"
            {% include "treemap/partials/date_picker_init.html" %}
            />
 
