Rename plot to planting site in udfc search

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -114,7 +114,7 @@
           {% endif %}
           {% if plot_stewardship_perm_level|is_read_or_write or plot_alerts_perm_level|is_read_or_write %}
           {% if stewardship.plot.fields or alerts.plot.fields %}
-          <option data-model="plot">{% trans "plots" %}</option>
+          <option data-model="plot">{% trans "planting sites" %}</option>
           {% endif %}
           {% endif %}
         </select>
