Improve buttons and used to fix admin issue #77

--- a/opentreemap/treemap/css/sass/_base.scss
+++ b/opentreemap/treemap/css/sass/_base.scss
@@ -17,6 +17,15 @@ $main-text-color                : #231f20; // Black text color
 $subtext-color                  : #799397; // Midtone gray text color
 $light-gray-color               : #f1f2f2; // Light gray color
 
+// Button Colors
+$button-default                 : #f1f2f2;
+$button-primary                 : #8baa3d;
+$button-success                 : #add142;
+$button-info                    : #5bc0de;
+$button-warning                 : #f0ad4e;
+$button-danger                  : #df4425;
+$button-inverse                 : #231f20;
+
 // Background Image
 $background-image               : url('/static/img/default-background.jpg') !default; // Standard tree background
 
