Cleanup udfc search markup and tighten up perms

--- a/opentreemap/treemap/templates/udfc_search.html
+++ b/opentreemap/treemap/templates/udfc_search.html
@@ -1,23 +1,30 @@
 {% load i18n %}
 {% load instance_config %}
 
+{# these with statements are rough, but it makes the markup easier to read #}
 {% with stewardship=advanced_search_fields.udfc.stewardship %}
 {% with alerts=advanced_search_fields.udfc.alerts %}
 {% if stewardship or alerts %}
-{% with tree_stewardship_perm_level=last_effective_instance_user|udf_write_level:stewardship.tree.udfd %}
-{% with plot_stewardship_perm_level=last_effective_instance_user|udf_write_level:stewardship.plot.udfd %}
-{% if tree_stewardship_perm_level|is_read_or_write or plot_stewardship_perm_level|is_read_or_write or tree_alerts_perm_level|is_read_or_write or plot_alerts_perm_level|is_read_or_write %}
+
+{% with t_stew_allowed=last_effective_instance_user|udf_write_level:stewardship.tree.udfd|is_read_or_write %}
+{% with p_stew_allowed=last_effective_instance_user|udf_write_level:stewardship.plot.udfd|is_read_or_write %}
+
+{% with t_alerts_allowed=last_effective_instance_user|udf_write_level:alerts.tree.udfd|is_read_or_write %}
+{% with p_alerts_allowed=last_effective_instance_user|udf_write_level:alerts.plot.udfd|is_read_or_write %}
+
+{% if t_stew_allowed or p_stew_allowed or t_alerts_allowed or p_alerts_allowed %}
+
 <div class="udfc-search">
   <span>{% trans "I am looking for" %}</span>
   <label class="udfc-label">
     <select id="udfc-search-model">
       <option data-class="udfc-placeholder" selected />
-      {% if tree_stewardship_perm_level|is_read_or_write or tree_alerts_perm_level|is_read_or_write %}
+      {% if t_stew_allowed or t_alerts_allowed %}
       {% if stewardship.tree.fields or alerts.tree.fields %}
       <option data-model="tree">{% trans "trees" %}</option>
       {% endif %}
       {% endif %}
-      {% if plot_stewardship_perm_level|is_read_or_write or plot_alerts_perm_level|is_read_or_write %}
+      {% if p_stew_allowed or p_alerts_allowed %}
       {% if stewardship.plot.fields or alerts.plot.fields %}
       <option data-model="plot">{% trans "planting sites" %}</option>
       {% endif %}
@@ -29,6 +36,7 @@
     <select id="udfc-search-type">
       <option data-class="udfc-placeholder" selected />
       {% if stewardship %}
+      {% if t_stew_allowed or p_stew_allowed %}
       <option data-type="stewardship"
               data-plot-udfd-id="{{ stewardship.plot.udfd.pk }}"
               data-tree-udfd-id="{{ stewardship.tree.udfd.pk }}"
@@ -36,7 +44,10 @@
               data-action-field-key="Action"
               >{% trans "that have been" %}</option>
       {% endif %}
+      {% endif %}
+
       {% if alerts %}
+      {% if t_alerts_allowed or p_alerts_allowed %}
       <option data-type="alerts"
               data-plot-udfd-id="{{ alerts.plot.udfd.pk }}"
               data-tree-udfd-id="{{ alerts.tree.udfd.pk }}"
@@ -44,34 +55,50 @@
               data-action-field-key="Action Needed"
               >{% trans "with open alerts for" %}</option>
       {% endif %}
+      {% endif %}
     </select>
   </label>
 
   
   <div id="udfc-extra-clauses" style="display: none">
+    {% if alerts %}
+    {% if t_alerts_allowed or p_alerts_allowed %}
     <input id="alerts-resolved"
            data-type="alerts"
            data-field="Status"
            data-search-type="IS"
            value="Unresolved"/>
+    {% endif %}
+    {% endif %}
   </div>
   
 
   <label class="udfc-label">
     <select id="udfc-search-action" data-search-type="IS">
       <option data-class="udfc-placeholder" selected />
+      {% if t_stew_allowed %}
       {% for action in stewardship.tree.fields %}
       <option data-model="tree" data-type="stewardship">{{ action }}</option>
       {% endfor %}
+      {% endif %}
+
+      {% if t_alerts_allowed %}
       {% for action in alerts.tree.fields %}
       <option data-model="tree" data-type="alerts">{{ action }}</option>
       {% endfor %}
+      {% endif %}
+
+      {% if p_stew_allowed %}
       {% for action in stewardship.plot.fields %}
       <option data-model="plot" data-type="stewardship">{{ action }}</option>
       {% endfor %}
+      {% endif %}
+
+      {% if p_alerts_allowed %}
       {% for action in alerts.plot.fields %}
       <option data-model="plot" data-type="alerts">{{ action }}</option>
       {% endfor %}
+      {% endif %}
     </select>
   </label>
 
@@ -90,6 +117,10 @@
 {% endif %}
 {% endwith %}
 {% endwith %}
+{% endwith %}
+{% endwith %}
+
 {% endif %}
+
 {% endwith %}
 {% endwith %}
