Fix styling issue on photo review page
The margin-left was only being applied to the first element, so 3 images
fit on the first row and only 2 images fit on every row after that

--- a/opentreemap/treemap/css/sass/partials/pages/_admin.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_admin.scss
@@ -120,4 +120,12 @@
             border-bottom: 1px solid #DDD;
         }
     }
+
+    #photo-review-container {
+        .thumbnails {
+            .span4:nth-child(3n-2) {
+                margin-left: 0;
+            }
+        }
+    }
 }
