--- a/opentreemap/treemap/templates/treemap/partials/photo_review.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo_review.html
@@ -9,13 +9,13 @@
 <div class="pagination">
   <ul>
     <li class="{% if not prev_page %}disabled{% endif %}">
-      <a data-page="{{ prev_page }}">{% trans "Prev" %}</a>
+      <a data-page="{{ prev_page|default_if_none:"" }}">{% trans "Prev" %}</a>
     </li>
     {% for page in pages %}
     <li class="{% if cur_page == page %}active{% endif %}"><a data-page="{{ page }}">{{ page }}</a></li>
     {% endfor %}
     <li class="{% if not next_page %}disabled{% endif %}">
-      <a data-page="{{ next_page }}">{% trans "Next" %}</a>
+      <a data-page="{{ next_page|default_if_none:""}}">{% trans "Next" %}</a>
     </li>
   </ul>
 </div>
