--- a/opentreemap/treemap/templates/treemap/partials/photo.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo.html
@@ -7,8 +7,8 @@
     <a href="{{ photo.image.url }}">
       <img data-id="{{ photo.pk }}" src="{{ photo.thumbnail.url }}">
     </a>
-    <a class="action" href="{% url "approve_or_reject_photo" instance_url_name=request.instance.url_name feature_id=photo.tree.plot.pk tree_id=photo.tree.pk photo_id=photo.pk action="approve" %}">{% trans "Approve" %}</a>
-    <a class="action" href="{% url "approve_or_reject_photo" instance_url_name=request.instance.url_name feature_id=photo.tree.plot.pk tree_id=photo.tree.pk photo_id=photo.pk action="reject" %}">{% trans "Reject" %}</a>
+    <a class="action" href="{% url "approve_or_reject_photo" instance_url_name=request.instance.url_name feature_id=photo.map_feature.pk photo_id=photo.pk action="approve" %}">{% trans "Approve" %}</a>
+    <a class="action" href="{% url "approve_or_reject_photo" instance_url_name=request.instance.url_name feature_id=photo.map_feature.pk photo_id=photo.pk action="reject" %}">{% trans "Reject" %}</a>
     <div><a href="{{ photo|detail_link }}">{% trans "View Detail" %}</a></div>
   </div>
 </li>
