--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -199,7 +199,7 @@
            {% else %}
            href="http://www.arborday.org/trees/whatTree/"
            {% endif %}
-           >{% trans "Tree Key" %}</a></li>
+           >{% trans "Tree ID" %}</a></li>
     {% for name in request.instance.static_page_names %}
     <li><a href="{% url 'static_page' instance_url_name=request.instance.url_name page=name %}">{{ name }}</a></li>
     {% endfor %}
