--- a/opentreemap/treemap/css/sass/partials/pages/_treedetails.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_treedetails.scss
@@ -143,7 +143,7 @@
     }
 }
 
-#tree-photo-carousel {
+#photo-carousel {
     .carousel-inner {
         margin-bottom: 10px;
         height: 225px;
