--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -19,7 +19,7 @@
   <div class="row-fluid">
     <div class="span3">
       <div class="photo-container">
-        <div id="tree-photo-carousel" class="carousel slide" data-interval="">
+        <div id="photo-carousel" class="carousel slide" data-interval="">
             {% include "treemap/partials/photo_carousel.html" with photos=tree.photos %}
         </div>
 {% if feature.is_plot %}
@@ -206,7 +206,7 @@ var mapFeatureOptions = {
     imageUploadPanel: {
         panelId: '#add-photo-modal',
         dataType: 'html',
-        imageContainer: '#tree-photo-carousel'
+        imageContainer: '#photo-carousel'
     },
     location: {
         edit: '#edit-location',
