Cleanup modal to support easier arg organization

--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -12,7 +12,7 @@
 {% endblock subhead_exports %}
 
 {% block content %}
-{% include "treemap/partials/upload_image.html" with panel_id="add-photo-modal" title="Add a Photo" endpoint=upload_tree_photo_url %}
+{% include "treemap/partials/upload_image.html" with panel_id="add-photo-modal" title="Add a Photo" %}
 
 <div class="image-background"></div>
 <div class="container contained topper tree-details">
