--- a/opentreemap/treemap/templates/treemap/map_feature_detail.html
+++ b/opentreemap/treemap/templates/treemap/map_feature_detail.html
@@ -20,18 +20,21 @@
     <div class="span3">
       <div class="photo-container">
         <div id="photo-carousel" class="carousel slide" data-interval="">
-            {% include "treemap/partials/photo_carousel.html" with photos=tree.photos %}
+            {% include "treemap/partials/photo_carousel.html" %}
         </div>
-{% if feature.is_plot %}
         <button id="toggle-add-photo-modal"
                 data-toggle="modal"
                 data-target="#add-photo-modal"
-                data-always-enable="{{ last_effective_instance_user.can_add_photos_to_tree }}"
                 data-href="{{ request.get_full_path }}"
                 disabled="disabled"
+                {% if feature.is_plot %}
                 data-disabled-title="{% trans "Adding tree photos is not available to all users" %}"
+                data-always-enable="{{ last_effective_instance_user.can_add_photos_to_tree }}"
+                {% else %}
+                data-disabled-title="{% trans "Adding resource photos is not available to all users" %}"
+                data-always-enable="{{ last_effective_instance_user.can_add_photos_to_map_feature }}"
+                {% endif %}
                 class="btn btn-mini add-photos">{% trans "Add Photo" %}</button>
-{% endif %}
       </div>
       <div id="sidebar">
         {% include "treemap/partials/sidebar.html" %}
